--- a/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
+++ b/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
@@ -5,8 +5,8 @@ date : 23-05-2022
 ---
 
 ## 19 maggio
-- **Massimiliano De Giovanni** (Kappalab) presenta "Pinocchio" di Osamuy Tezuka - (dettagli -->) [[Pinocchio - Tezuka]]
-- **Vito Mancuso** e **Matteo Maria Zuppi** parlano di **Dietrich Bonhoeffer**
+- **Massimiliano De Giovanni** (Kappalab) presenta "Pinocchio" di Osamuy Tezuka - (dettagli --> [[Pinocchio - Tezuka]])
+- **Vito Mancuso** e **Matteo Maria Zuppi** parlano di **Dietrich Bonhoeffer** (dettagli --> [[Dietrich Bonhoeffer]])
 - Antonella Anichini, Carmine di Giandomenico, Davide Monopoli e Antonello Raciti parlano del rapporto fra adolescenti e fumetti (manga)
 
 ## 20 maggio
