--- a/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
+++ b/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
@@ -4,13 +4,15 @@ notetype : feed
 date : 23-05-2022
 ---
 
+![l1975](/assets/img/battaglia01 mafia 1975.jpg)
+
 ## 19 maggio
 - **Massimiliano De Giovanni** (Kappalab) presenta "Pinocchio" di Osamuy Tezuka - (dettagli --> [[Pinocchio - Tezuka]])
 - **Vito Mancuso** e **Matteo Maria Zuppi** parlano di **Dietrich Bonhoeffer** (dettagli --> [[Dietrich Bonhoeffer]])
-- Antonella Anichini, Carmine di Giandomenico, Davide Monopoli e Antonello Raciti parlano del rapporto fra adolescenti e fumetti (manga)
+- Antonella Anichini, Carmine di Giandomenico, Davide Monopoli e Antonello Raciti parlano del rapporto fra adolescenti e fumetti (manga) (dettagli --> [[L'adolescenza da Spiderman a Batman]])
 
 ## 20 maggio
-- **Aldo Schiavone** parla di come nasce una società planteria
+- **Aldo Schiavone** con **Luciano Canfora** e **Stefano Feltri** parlano di come nasce una società planteria (dettagli --> [[Città planetarie]])
 - Mauro Berruto e Alberto Infelise palano di "American Icon - Miti e leggende dello sport a stelle e strisce"
 - **Francesco Pannofino** racconta la sua esperienza nella lettura della trilogia di Valis di Philip K. Dick
 - Chiara Valerio dialoga con **Benjamin Labatut** a proposito di "Quando abbiamo smesso di capire il mondo"
