--- a/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
+++ b/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
@@ -4,7 +4,7 @@ notetype : feed
 date : 23-05-2022
 ---
 
-![l1975](/assets/img/battaglia01 mafia 1975.jpg)
+![ingresso](/assets/foto/salto22.jpg)
 
 ## 19 maggio
 - **Massimiliano De Giovanni** (Kappalab) presenta "Pinocchio" di Osamuy Tezuka - (dettagli --> [[Pinocchio - Tezuka]])
@@ -13,16 +13,29 @@ date : 23-05-2022
 
 ## 20 maggio
 - **Aldo Schiavone** con **Luciano Canfora** e **Stefano Feltri** parlano di come nasce una società planteria (dettagli --> [[Città planetarie]])
-- Mauro Berruto e Alberto Infelise palano di "American Icon - Miti e leggende dello sport a stelle e strisce"
-- **Francesco Pannofino** racconta la sua esperienza nella lettura della trilogia di Valis di Philip K. Dick
-- Chiara Valerio dialoga con **Benjamin Labatut** a proposito di "Quando abbiamo smesso di capire il mondo"
+- Mauro Berruto e Alberto Infelise palano di "**American Icon** - Miti e leggende dello sport a stelle e strisce" [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto_icone.jpg)
+- **Francesco Pannofino** racconta la sua esperienza nella lettura della trilogia di Valis di Philip K. Dick [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto_pannofino.jpg)
+- Chiara Valerio dialoga con **Benjamin Labatut** a proposito di "Quando abbiamo smesso di capire il mondo" [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto_labatut.jpg)
 
 ## 21 maggio
-- Elisabetta Caporale intervista **Marino Bartoletti** su "Il ritorno degli dei"
-- **Paolo Verri** con il sindaco di Torino (Stefano Lorusso), la sindaca di Settimo Torinese (Elena Piastra) e l'assessore alla cultura di Milano (Tommaso Sacchi) parlano de **Il paradosso urbano**, su come nove città (tre italiane: torino, milano, matera) sono riuscite ad evolversi
-
+- Elisabetta Caporale intervista **Marino Bartoletti** su "Il ritorno degli dei" [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto_bartoletti.jpg)
+- **Paolo Verri** con il sindaco di Torino (Stefano Lorusso), la sindaca di Settimo Torinese (Elena Piastra) e l'assessore alla cultura di Milano (Tommaso Sacchi) parlano de **Il paradosso urbano**, su come nove città (tre italiane: torino, milano, matera) sono riuscite ad evolversi [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto_verri.jpg)
 ## 22 maggio
-- **Massimo Recalcati** fa una lezione su "La legge della parola - Radici bibliche della psicoanalisi"
-- Tiziana Lo Porto intervista **Werner Herzog** sul suo ultimo libro "Il crepuscolo del mondo"
-- Vanni Santoni dialoga con **Alessandro Paolucci** (@Dio) autore di "Storia stupefacente della filosofia"
-- Antonio Holdenaccio, Daniel Cuello, **Zerocalcare**, Alice Berti, Alessandro Rostagnotto improvvisano un soggetto
+- **Massimo Recalcati** fa una lezione su "La legge della parola - Radici bibliche della psicoanalisi" (dettagli --> [[La legge delle parole]])
+- Tiziana Lo Porto intervista **Werner Herzog** sul suo ultimo libro "Il crepuscolo del mondo" (dettagli --> [[Il crepuscolo del mondo]])
+- Vanni Santoni dialoga con **Alessandro Paolucci** (@Dio) autore di "Storia stupefacente della filosofia" [immagine](https://brave-galileo-21a93d.netlify.app/assets/img/battaglia01%20mafia%201975.jpg)
+- Antonio Holdenaccio, Daniel Cuello, **Zerocalcare**, Alice Berti, Alessandro Rostagnotto improvvisano un soggetto [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto22_zerocalcare.jpg)
+
+## per il salone
+
+![per il salone](/assets/foto/salto22_1jpg)
+
+![per il salone](/assets/foto/salto22_2.jpg)
+
+![per il salone](/assets/foto/salto22_3jpg)
+
+![per il salone](/assets/foto/salto22_4jpg)
+
+![per il salone](/assets/foto/salto22_5jpg)
+
+
