--- a/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
+++ b/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
@@ -23,19 +23,19 @@ date : 23-05-2022
 ## 22 maggio
 - **Massimo Recalcati** fa una lezione su "La legge della parola - Radici bibliche della psicoanalisi" (dettagli --> [[La legge delle parole]])
 - Tiziana Lo Porto intervista **Werner Herzog** sul suo ultimo libro "Il crepuscolo del mondo" (dettagli --> [[Il crepuscolo del mondo]])
-- Vanni Santoni dialoga con **Alessandro Paolucci** (@Dio) autore di "Storia stupefacente della filosofia" [immagine](https://brave-galileo-21a93d.netlify.app/assets/img/battaglia01%20mafia%201975.jpg)
+- Vanni Santoni dialoga con **Alessandro Paolucci** (@Dio) autore di "Storia stupefacente della filosofia" [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto22_dio.jpg)
 - Antonio Holdenaccio, Daniel Cuello, **Zerocalcare**, Alice Berti, Alessandro Rostagnotto improvvisano un soggetto [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto22_zerocalcare.jpg)
 
 ## per il salone
 
-![per il salone](/assets/foto/salto22_1jpg)
+![per il salone](/assets/foto/salto22_1.jpg)
 
 ![per il salone](/assets/foto/salto22_2.jpg)
 
-![per il salone](/assets/foto/salto22_3jpg)
+![per il salone](/assets/foto/salto22_3.jpg)
 
-![per il salone](/assets/foto/salto22_4jpg)
+![per il salone](/assets/foto/salto22_4.jpg)
 
-![per il salone](/assets/foto/salto22_5jpg)
+![per il salone](/assets/foto/salto22_5.jpg)
 
 
