--- a/_notes/Public/diario/2022, Maggio 22. Camera Torino.md
+++ b/_notes/Public/diario/2022, Maggio 22. Camera Torino.md
@@ -25,29 +25,29 @@ catalogo
 
 ## fotografie
 
-- [[will ruge.pdf]] che scatta foto a se stesso mentre fa paracadutismo
+- [Will Ruge](/assets/allegati/will ruge.pdf) che scatta foto a se stesso mentre fa paracadutismo
 
 ![Will Ruge](/assets/foto/moma ruge.jpg)
 
-![Kertesz](/assets/foto/moma_kertesz.jpg)
+![Kertesz](/assets/foto/moma kertesz.jpg)
 
-![Abbott](/assets/foto/moma abbott.jpg)
+![Abbott](/assets/foto/moma_abbott.jpg)
 
-![burchartz](/assets/foto/moma burchartz.jpg)
+![burchartz](/assets/foto/moma_burchartz.jpg)
 
-![Citroen](/assets/foto/moma citroen.jpg)
+![Citroen](/assets/foto/moma_citroen.jpg)
 
-![Rodchenko](/assets/foto/moma rodchenko.jpg)
+![Rodchenko](/assets/foto/moma_rodchenko.jpg)
 
-![rubin](/assets/foto/moma rubin.jpg)
+![rubin](/assets/foto/moma_rubin.jpg)
 
-![tabard](/assets/foto/moma tabard.jpg)
+![tabard](/assets/foto/moma_tabard.jpg)
 
-![umbo](/assets/foto/moma umbo.jpg)
+![umbo](/assets/foto/moma_umbo.jpg)
 
-![wolff](/assets/foto/moma wolff.jpg)
+![wolff](/assets/foto/moma_wolff.jpg)
 
-![yomawaki](/assets/foto/moma yomawaki.jpg)
+![yomawaki](/assets/foto/moma_yomawaki.jpg)
 
 
 
@@ -62,13 +62,13 @@ catalogo
 
 ## documenti
 estratti dal catalogo
-- [[august sander.pdf]]
-- [[edward weston.pdf]]
-- [[hajo rose.pdf]]
-- [[herbert bayer.pdf]]
-- [[langdon coburn.pdf]]
-- [[leni riefenstahl.pdf]]
-- [[paul citroen.pdf]]
-- [[umbo.pdf]]
-- [[walker evans.pdf]]
-- [[will ruge.pdf]]
+- [August Sander](/assets/allegati/august sander.pdf)
+- [Edward Weston](/assets/allegati/edward weston.pdf)
+- [Hajo Rose](/assets/allegati/hajo rose.pdf)
+- [Herbert Bayer](/assets/allegati/herbert bayer.pdf)
+- [Langdon Coburn](/assets/allegati/langdon coburn.pdf)
+- [Leni Riefenstahl](/assets/allegati/leni riefenstahl.pdf)
+- [Paul Citroen](/assets/allegati/paul citroen.pdf)
+- [Umbo](/assets/allegati/umbo.pdf)
+- [Walker Evans](/assets/allegati/walker evans.pdf)
+- [Will Ruge](/assets/allegati/will ruge.pdf)
