--- a/_notes/Public/diario/2022, Maggio 22. Camera Torino.md
+++ b/_notes/Public/diario/2022, Maggio 22. Camera Torino.md
@@ -66,7 +66,7 @@ estratti dal catalogo
 - [Edward Weston](/assets/allegati/edward weston.pdf)
 - [Hajo Rose](/assets/allegati/hajo rose.pdf)
 - [Herbert Bayer](/assets/allegati/herbert bayer.pdf)
-- [Langdon Coburn](/assets/allegati/langdon coburn.pdf)
+- [Alving Langdon Coburn](/assets/allegati/langdon coburn.pdf)
 - [Leni Riefenstahl](/assets/allegati/leni riefenstahl.pdf)
 - [Paul Citroen](/assets/allegati/paul citroen.pdf)
 - [Umbo](/assets/allegati/umbo.pdf)
