--- a/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
+++ b/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
@@ -1,6 +1,6 @@
 ---
 title: 2022, Maggio 19-23. Salone del Libro di Torino
-notetype : feed
+notetype : unfeed
 date : 23-05-2022
 ---
 
@@ -20,6 +20,7 @@ date : 23-05-2022
 ## 21 maggio
 - Elisabetta Caporale intervista **Marino Bartoletti** su "Il ritorno degli dei" [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto_bartoletti.jpg)
 - **Paolo Verri** con il sindaco di Torino (Stefano Lorusso), la sindaca di Settimo Torinese (Elena Piastra) e l'assessore alla cultura di Milano (Tommaso Sacchi) parlano de **Il paradosso urbano**, su come nove città (tre italiane: torino, milano, matera) sono riuscite ad evolversi [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto_verri.jpg)
+
 ## 22 maggio
 - **Massimo Recalcati** fa una lezione su "La legge della parola - Radici bibliche della psicoanalisi" (dettagli --> [[La legge delle parole]])
 - Tiziana Lo Porto intervista **Werner Herzog** sul suo ultimo libro "Il crepuscolo del mondo" (dettagli --> [[Il crepuscolo del mondo]])
