--- a/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
+++ b/_notes/Public/diario/2022, Maggio 19-23. Salone del Libro di Torino.md
@@ -22,7 +22,7 @@ date : 23-05-2022
 - **Paolo Verri** con il sindaco di Torino (Stefano Lorusso), la sindaca di Settimo Torinese (Elena Piastra) e l'assessore alla cultura di Milano (Tommaso Sacchi) parlano de **Il paradosso urbano**, su come nove città (tre italiane: torino, milano, matera) sono riuscite ad evolversi [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto_verri.jpg)
 
 ## 22 maggio
-- **Massimo Recalcati** fa una lezione su "La legge della parola - Radici bibliche della psicoanalisi" (dettagli --> [[La legge delle parole]])
+- **Massimo Recalcati** fa una lezione su "La legge della parola - Radici bibliche della psicoanalisi" (dettagli --> [[La legge della Parola]])
 - Tiziana Lo Porto intervista **Werner Herzog** sul suo ultimo libro "Il crepuscolo del mondo" (dettagli --> [[Il crepuscolo del mondo]])
 - Vanni Santoni dialoga con **Alessandro Paolucci** (@Dio) autore di "Storia stupefacente della filosofia" [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto22_dio.jpg)
 - Antonio Holdenaccio, Daniel Cuello, **Zerocalcare**, Alice Berti, Alessandro Rostagnotto improvvisano un soggetto [immagine](https://brave-galileo-21a93d.netlify.app/assets/foto/salto22_zerocalcare.jpg)
