--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -1265,3 +1265,213 @@ Edizione
 Sezione
 
 [RITROVATI E RESTAURATI](https://festival.ilcinemaritrovato.it/sezione/ritrovati-e-restaurati-8/ "RITROVATI E RESTAURATI")
+## INVADERS FROM MARS
+
+#### SCHEDA FILM
+
+Molti film d’invasione iniziano su miriadi d’astri inquadrati da un luogo imprecisato nel cosmo: la Terra, di regola, è un punto fra migliaia. Talvolta la macchina da presa avanza nello spazio finché un pianeta, il nostro, si staglia riconoscibile tra gli altri. […] _Invaders_ _from_ _Mars_ ripercorre lo schema menzionato in una variante cruciale: il movimento di macchina in avanti parte nel cosmo e, tramite dissolvenza incrociata, procede verso una casa, una finestra, un bambino che dorme. Nel vano della finestra si staglia la sagoma di un cannocchiale, e il primo gesto del bambino sarà appoggiarci l’occhio per guardare il firmamento. Ci troviamo di fronte a una sorta di passaggio di testimone, un rovesciamento di prospettiva (dalle stelle alla Terra e viceversa) che consegna al piccolo protagonista l’orientamento dello sguardo del film. Il pubblico della fantascienza dei Cinquanta è prevalentemente adolescente, se non più giovane. Come normale conseguenza, alcuni esempi eleggono i giovani a protagonisti. […] David, l’eroe di _Invaders from Mars_, è anche un esperto del genere: avido lettore di riviste pulp, aspirante scienziato, informatissimo sui casi d’avvistamento che vivificano le pagine di cronaca. La storia raccontata sarà in primo luogo la sua avventura, secondariamente un caso di interesse nazionale e planetario. […] L’esperta messa in scena di Menzies valorizza in alcuni frangenti un punto di vista anomalo e deformante, bambinesco e al tempo stesso onirico. […] È possibile liquidare _Invaders_ _from_ _Mars_ come film per ragazzi a condizione che se ne accettino le ambiguità e i segnali inquietanti che lo punteggiano. […] I genitori si tramutano da educatori amorevoli in dittatori (per inciso, c’è forse un’ombra di inquietudine nella segretezza dei progetti missilistici a cui il padre lavora), un’angelica bambina si stampa sul volto un sorriso demoniaco dopo aver incendiato casa propria, l’uomo nero può atterrare subito oltre lo steccato del giardino. È un volto dorato racchiuso in una boccia di vetro e provvisto di tentacoli, impassibile campione della ‘pura intelligenza’: al contempo, provvede agli incubi peggiori e ai sogni più difficili da dimenticare.
+
+Andrea Meneghelli, in Andrea Meneghelli, Roy Menarini, _Fantascienza_ _in_ _cento_ _film,_ Le Mani, Genova 2000
+
+#### CAST AND CREDITS
+
+Scen.: Richard Blake. F.: John F. Seitz. M.: Arthur Roberts. Scgf.: Boris Leven, William Cameron Menzies. Mus.: Raoul Kraushaar. Int.: Helena Carter (dottoressa Pat Blake), Arthur Franz (dottor Stuart Kelston), Jimmy Hunt (David MacLean), Leif Erickson (George MacLean), Hillary Brooke (Mary MacLean), Morris Ankrum (colonnello Fielding), Max Wagner (sergente Rinaldi), William Phipps (maggiore Cleary), Milburn Stone (capitano Roth), Janine Perreau (Kathy Wilson). Prod.: Edward L. Alperson per National Pictures Corp. DCP. D.: 78’. Col.
+
+#### IN BREVE
+
+Titolo Italiano
+
+Gli invasori spaziali
+
+Regia: William Cameron Menzies
+
+Anno: 1953
+
+Paese: USA
+
+Durata: 78'
+
+Versione del film
+
+Versione inglese
+
+Audio
+
+Sonoro
+
+Edizione
+
+2022
+
+Sezione
+
+[RITROVATI E RESTAURATI](https://festival.ilcinemaritrovato.it/sezione/ritrovati-e-restaurati-8/ "RITROVATI E RESTAURATI")
+Introducono 
+
+**Lee Kline** (Criterion), **Roberto Turigliatto** (Locarno Film Festival) e **Bernard Eisenschitz**
+
+Evento speciale  
+_**Omaggio a Nino Rota**_  
+Cristina Zavalloni (voce), Manuel Magrini (pianoforte)
+
+A seguire  
+_Ritrovati e Restaurati_  
+**WRITTEN ON THE WIND**
+
+(In caso di pioggia, la proiezione si sposterà al Cinema Arlecchino, al Cinema Jolly e in Sala Scorsese)
+
+#### INFO SULLA  
+PROIEZIONE
+
+MERCOLEDÌ 29/06/2022
+
+21:45
+
+[PIAZZA MAGGIORE](https://festival.ilcinemaritrovato.it/luogo/piazza-maggiore/)
+
+[RITROVATI E RESTAURATI](https://festival.ilcinemaritrovato.it/sezione/ritrovati-e-restaurati-8/)
+
+Sottotitoli
+
+Versione originale con sottotitoli
+
+Modalità di ingresso
+
+[Tariffe del Festival](https://festival.ilcinemaritrovato.it/prenotazioni-2022/)
+
+## WRITTEN ON THE WIND
+Introducono 
+
+**Lee Kline** (Criterion), **Roberto Turigliatto** (Locarno Film Festival) e **Bernard Eisenschitz**
+
+Evento speciale  
+_**Omaggio a Nino Rota**_  
+Cristina Zavalloni (voce), Manuel Magrini (pianoforte)
+
+A seguire  
+_Ritrovati e Restaurati_  
+**WRITTEN ON THE WIND**
+
+(In caso di pioggia, la proiezione si sposterà al Cinema Arlecchino, al Cinema Jolly e in Sala Scorsese)
+#### SCHEDA FILM
+
+“Uno studio sul fallimento”. Così Sirk definiva _Written on the Wind_, precisando che al termine inglese ‘failure’ preferiva il francese ‘échec’,più carico del senso tragico di non avere via d’uscita. “L’échec è una delle poche cose che mi appassionino davvero”. Nessun romanticismo, nessuna concessione al mito del _loser_. Pur nella sontuosa stilizzazione, qui è tutto decadenza e rovina. Siamo in Texas, i macchinari estraggono petrolio a ritmo continuo e con un lamento cigolante, eco dei ritmi e del lamento di generazioni di schiavi, mentre villa Hadleyè l’ultima replica di tante mansions coloniali e le foglie secche che turbinano ovunque potrebbero essere state portate fin qui dal vento di Tara. Una tragedia americana dove tutto è già accaduto, ma possiamo esser certi che domani non sarà un altro giorno: “Nei miei film volevo mostrare questo: le tragedie si ripetono sempre”.  
+Sirk ha a disposizione il suo miglior cast, e sa come usarlo. Tiene sottotono la coppia romantica, Rock e Lauren, lasciandoli però irradiare a ogni apparizione la loro luce divistica, e tende fino allo spasimo le passioni di Robert Stack e Dorothy Malone, i due ricchi, infelici, corrottirampolli Hadley. Una retorica nitida e potente ci parla dell’irrisarcibile ferita di non piacere al proprio padre, della patetica utopia di tornarea un’infanzia innocente (che non è mai stata tale), della frustrazione sessuale coltivata come una malapianta, della tetra consolazione dell’alcol. Ci sono i colori, come sempre: fiori bianchi fanno da sfondo al passaggio di Lauren Bacall, anturium rossi e insolenti dividono l’inquadratura con Dorothy Malone, che per ballare la sua “danza di morte” (Fassbinder) si sveste e riveste di veli rosa, una qualsiasi cattivaragazza diventata qualcosa a metà tra una Salomè e una lady Macbeth. Il film, alla fine, è suo e della sua solitudine: la scena in cui stringetra dita carezzevoli il modellino di torre petrolifera è stata letta da Truffaut (e da tutti dopo di lui) nel senso dell’ironica compensazionesessuale, Sirk si limitava a dire: “Un’immagine agghiacciante della società americana”. Perché i colori ci sono, ma più che mai sembrano pennellate di vernice su un fondo scuro. Perché _Written on the Wind_ è, per usare ancora le parole di Fassbinder, una cupa storia splendente “sull’amore, sulla morte e sull’America”.
+
+Paola Cristalli
+
+#### CAST AND CREDITS
+
+Sog.: dal romanzo omonimo (1946) di Robert Wilder. : George Zuckerman. F.: Russell Metty. M.: Russell Schoengarth. Scgf.: Alexander Golitzen, Robert Clatworthy. Mus.: FrankSkinner. Int.: Rock Hudson (Mitch Wayne), Lauren Bacall (Lucy Moore Hadley), Robert Stack (Kyle Hadley), Dorothy Malone (Marylee Hadley), Robert Keith (Jasper Hadley), Grant Williams (Biff Miley), Robert Wilke (Dan Willis), Edward C. Platt (dottor Paul Cochrane), Harry Shannon (Hoak Wayne), John Larch (Roy Carter). Prod.: Albert Zugsmith per Universal-International. DCP. D.: 99’. Col.
+
+#### IN BREVE
+
+Titolo Italiano
+
+Come le foglie al vento
+
+Regia: Douglas Sirk
+
+Anno: 1956
+
+Paese: USA
+
+Durata: 99'
+
+Versione del film
+
+Versione inglese
+
+Audio
+
+Sonoro
+
+Edizione
+
+2022
+
+Sezione
+## TAU BAN NO HOI
+
+#### SCHEDA FILM
+
+Perché qualcuno lascia la propria casa per cercare rifugio altrove? Questa domanda è al centro di _Tau_ _Ban No Hoi_ di Ann Hui, che racconta le traversie di coloro che lasciarono il Vietnam dopo la caduta di Saigon. Realizzato durante la nouvelle vague cinematografica di Hong Kong e la seconda ondata di profughi vietnamiti, il film di Hui fornisce una risposta cruda e commovente a quella domanda documentando la vita del Vietnam postbellico e mostrando come la violenza, l’assenza di libertà e la disperazione abbiano costretto la gente a rischiare tutto salendo su quelle barche. _Tau_ _Ban_ _No_ _Hoi_ offre una delle prime rappresentazioni cinematografiche dei profughi vietnamiti e conclude la ‘trilogia del Vietnam’ di Hui: dopo _The Boy from Vietnam_ (1978) e _The_ _Story_ _of_ _Woo_ _Viet_ (1981), l’ultimo film della trilogia distilla le tematiche di fondo dei primi due e si concentra sulle forze trainanti della migrazione dei rifugiati. È stato realizzato quando la maggior parte dei migranti non aveva accesso agli strumenti di autorappresentazione, quando i rifugiati erano visti soprattutto attraverso i titoli dei giornali e le politiche governative. Anche se negli ultimi decenni vi sono stati scrittori, artisti visivi e registi vietnamiti che hanno iniziato a raccontare le proprie storie, _Tau_ _Ban_ _No_ _Hoi_ resta un’opera rara e fondante, che ritrae i rifugiati vietnamiti come soggetti degni di contemplazione narrativa ed etica. Alla fine degli anni Settanta e all’inizio degli anni Ottanta i “boat people” in fuga dal Vietnam sbarcavano regolarmente nei paesi vicini […]. Il film di Hui ha offerto un contesto cruciale a questa situazione sociale, ritraendo i richiedenti asilo vietnamiti prima della loro fuga e documentando le condizioni che producevano il loro esilio. […] Per gli spettatori come me, che sono intimamente legati a questa storia di migrazione forzata, _Tau Ban No Hoi_ è una straordinaria istantanea della nostra realtà che cattura l’eco emotiva della nostra fuga dal Vietnam. Quasi cinquant’anni dopo la ‘fine’ della Guerra del Vietnam, il film di Hui rimane un’importante testimonianza sul retaggio della guerra, incentrandosi non sul dramma della geopolitica ma sui costi enormi per le vite umane.
+
+Vinh Nguyen_,_ _Ann_ _Hui’s_ Boat People_: Documenting Vietnamese Refugees in Hong Kong, in Looking Back on the Vietnam War: Twenty-First Century Perspectives,_ Rutgers University Press, New Brunswick 2016
+
+#### CAST AND CREDITS
+
+Sog.: Tin Goh. Scen.: Chiu Kang-Chien. F.: Wong Chung-Gei. M.: Kin Kin. Scgf.: Tony Au Ting-Ping. Mus.: Law Wing-Fai. Int.: George Lam (Shiomi Akutagawa), Season Ma (Cam Nuong), Cora Miao (la proprietaria del bar), Andy Lau (To Minh), Hao Jia-Ling (la madre di Cam Nuong), Qi Meng-Shi (Nguyen), Jia Mei-Ying (Le Van Quyen), Lin Shu-Jin (Vu), Guo Jun-Yi (Van Lang), Wu Shu-Jun (Van Nhac), Cheung Tung-Sing (il dottore). Prod.: Hsia Meng per Bluebird Movie Enterprises Ltd. DCP. D.: 109’. Col.
+
+#### IN BREVE
+
+Titolo Internazionale
+
+Boat People
+
+Regia: Ann Hui
+
+Anno: 1982
+
+Paese: Hong Kong
+
+Durata: 109'
+
+Versione del film
+
+Versione cantonese e giapponese con sottotitoli inglesi
+
+Audio
+
+Sonoro
+
+Edizione
+
+2022
+
+Sezione
+
+[RITROVATI E RESTAURATI](https://festival.ilcinemaritrovato.it/sezione/ritrovati-e-restaurati-8/ "RITROVATI E RESTAURATI")
+## ÉL
+
+#### SCHEDA FILM
+
+Nel 1953 la carriera registica di Luis Buñuel stava riprendendo con maggiore libertà e intraprendenza in Messico. Dopo il successo europeo di _I figli della violenza_, Luis Buñuel adattò con il suo complice e collaboratore abituale Luis Alcoriza il romanzo _Él_ di Mercedes Pinto: più che una storia di fantasia era la cronaca dettagliata del terrificante calvario vissuto da vittima di un marito megalomane e gelosissimo che era, in realtà, un caso grave di delirio paranoide (Lacan mostrava questo film ai suoi studenti di psichiatria come buona illustrazione della malattia).  
+Magnificamente interpretato da Arturo de Córdova, Francisco Galván è ciò che in Spagna si chiama _meapilas_, un baciapile: un devoto ‘cristiano buono e puro’, ma di fatto un vergine di mezza età. Ossessionato dai piedi calzati di un’altra fedele, Gloria (Delia Garcés), lacorteggia finché questa non rompe con il fidanzato per sposare lui, sorprendentemente affascinata com’è dal suo carattere dispotico. Ma già durante la luna di miele Gloria scopre e subisce la gelosia completamente ingiustificata dell’uomo, che interpreta maniacalmente ogni cosa come gesto beffardo e come prova dell’infedeltà della moglie o di complotti contro di sé e contro i propri interessi finanziari e patrimoniali. Diffida di sua moglie, dei suoi avvocati e di quasi tutti, disprezza gli esseri umani che considera parassiti e afferma in modo megalomane che se fosse Dio non perdonerebbe mai l’umanità.  
+Sebbene di solito Luis Buñuel fosse un grande umorista e un perenne surrealista, questo – un po’ come _Il ladro_ di Hitchcock – è probabilmente uno dei suoi film più seri, e anche uno dei più complessi e maggiormente caratterizzati da un narrazione tesa ed ellittica, e si conclude con una delle più inquietanti scene finali mai girate. Considerato da molti il migliore tra i capolavori di Buñuel insieme a _Estasi di un delitto_ e a _L’angelo sterminatore_, contiene alcune immagini che spingono a chiedersi se Hitchcock avesse visto e ricordasse _Él_ quando girò _La donna che visse due volte_ cinque anni dopo.
+
+Miguel Marías
+
+![](https://festival.ilcinemaritrovato.it/wp-content/uploads/sites/2/2022/06/MWF_logo-e1655893236621.png)
+
+![](https://festival.ilcinemaritrovato.it/wp-content/uploads/sites/2/2022/06/LOGO_OCSPlan-de-travail-1-300x108.png)
+
+#### CAST AND CREDITS
+
+Sog.: basato sul romanzo omonimo (1926) di Mercedes Pinto. Scen.: Luis Buñuel, Luis Alcoriza. F.: Gabriel Figueroa. M.: Carlos Savage. Scgf.: Edward Fitzgerald. Mus.: Luis Hernández Bretón. Int.: Arturo de Córdova (Francisco Galván de Montemayor), Delia Garcés (Gloria Vilalta), Aurora Walker (Esperanza Vilalta), Carlos Martínez Baena (padre Velasco), Manuel Dondé (Pablo), Rafael Banquell (Ricardo Luján), Fernando Casanova (Beltrán), Luis Beristáin (Raúl Conde). Prod.: Óscar Dancigers per Ultramar Films. DCP. D.: 92’. Bn.
+
+#### IN BREVE
+
+Regia: Luis Buñuel
+
+Anno: 1953
+
+Paese: Messico
+
+Durata: 92'
+
+Versione del film
+
+Versione spagnola con sottotitoli inglesi
+
+Audio
+
+Sonoro
+
+Edizione
+
+2022
+
+Sezione
+
+[RITROVATI E RESTAURATI](https://festival.ilcinemaritrovato.it/sezione/ritrovati-e-restaurati-8/ "RITROVATI E RESTAURATI")
