--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -10,8 +10,26 @@ date : 22-06-2022
 ![Al festival del Cinema Ritrovato](/assets/foto/2022/bologna_festival.jpg)
 
 ## Film visti
-- [[Carmen]], di Francesco Rosi (solo l'inizio)
-- [[Una giornata particolare]], di Ettore Scola, 1977
-- [[Ples v Dezju]], Jugoslavo (solo 1 ora ma è un peccato: era meraviglioso)
-- [[Arabesque]], di Stanley Donen
-- [[Caught]], di Max Opuls
+- 24 giugno
+	- [[Carmen]], di Francesco Rosi (solo l'inizio)
+- 25 giugno
+	- *** [[Una giornata particolare]], di Ettore Scola, 1977
+	- *** [[Ples v Dezju]], Jugoslavo (solo 1 ora ma è un peccato: era meraviglioso)
+	- [[Arabesque]], di Stanley Donen
+	- [[Caught]], di Max Opuls
+- 26 giugno
+	- [[The beast with five fingers]], con Peter Lorre, Usa, 1946
+	- *** [[Buck and the Preacher]], di e con Sidney Poiter, Usa, 1972
+	- [[Der Verlorene]], di e con Peter Lorre, 1951
+	- *** [[Sciuscia]], di Vittorio de Sica, Italia, 1946
+	- *** [[One way street]], di Hugo Fregonese con James Mason, Usa, 1950
+- 27 giugno
+	- [[Three strangers]], con Peter Lorre, 1946
+	- *** [[Ken]], di Kenji Misumi, Giappone, 1964
+- 28 giugno
+- 29 giugno
+- 30 giugno
+
+## film da recuperare
+
+- [[Et j'aime à la fureur]], film di montaggio di André Bonzel che racconta la sua vita con i video degli altri, Francia, 2021, 95' 
