--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -26,10 +26,25 @@ date : 22-06-2022
 - 27 giugno
 	- [[Three strangers]], con Peter Lorre, 1946
 	- *** [[Ken]], di Kenji Misumi, Giappone, 1964
+	- [[la regola del gioco]], di Jean Renoir, 1939
+	- [[Foolish wives]], di Erich von Stroheim, 1922 (solo mezz'ora)
 - 28 giugno
+	- *** [[Thamp]], di Aravindan Govindan, India, 1978
+	- [[Black Tuesday]], di Hugo Fregonese con Edward G. Robinson, Usa, 1954
+	- *** [[Kenki]], di Kenji Misumi, Giappone, 1965
+	- *** [[Man in the attic]], di Hugo Fregonese, Usa, 1953
 - 29 giugno
-- 30 giugno
+	- *** [[Algérie en flammes]], di René Vautier, Algeria, 1958
+	- [[Le mains libres]], di Ennio Lorenzini, Algeria, 1964
+	- *** [[My six convicts]], di Hugo Fregonese, Usa, 1952
+	- [[Le samourai]], di Jean-Pierre Melville, con Alain Delon, Francia-Italia, 1967
+	- [[Invaders from Mars]], di William Cameron Menzies, Usa, 1953
+	- [[Written on the wind]], di Douglas Sirk, con Rock Hudson, Usa, 1956
+
 
 ## film da recuperare
 
 - [[Et j'aime à la fureur]], film di montaggio di André Bonzel che racconta la sua vita con i video degli altri, Francia, 2021, 95' 
+- [[El]], di Luis Bunuel, Messico, 1953. film che non conosco di Bunuel
+- [[Tau ban no hoi]], di Ann Hui, Hong Kong, 1982. Film di Hong Kong in piena nouvelle vague (da confrontare con Wong Kar-Wai) ma che parla dei profughi Vietnamiti. Hui ha fatto altri due film su questo tema: _The Boy from Vietnam_ (1978) e _The story of Woo Viet_ (1981) componendo di fatto una triologia.
+- 
