--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -26,7 +26,7 @@ date : 22-06-2022
 - 27 giugno
 	- [[Three strangers]], con Peter Lorre, 1946
 	- *** [[Ken]], di Kenji Misumi, Giappone, 1964
-	- [[la regola del gioco]], di Jean Renoir, 1939
+	- [[La regola del gioco]], di Jean Renoir, 1939
 	- [[Foolish wives]], di Erich von Stroheim, 1922 (solo mezz'ora)
 - 28 giugno
 	- *** [[Thamp]], di Aravindan Govindan, India, 1978
