--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -9,6 +9,15 @@ date : 22-06-2022
 
 ![Al festival del Cinema Ritrovato](/assets/foto/2022/bologna_festival.jpg)
 
+Un elemento caratteristico del festival è l'accompagnamento dal vivo per i film muti. Qui due foto dell'orchestra in fase di riscaldamento
+![Orchestra](assets/foto/2022/bologna_foolish_orchestra.jpeg)
+
+e qui durante lo svolgimento del film
+![Orchestra](assets/foto/2022/bologna_foolish_orchestra2.jpeg)
+
+Qui anche un breve spezzone video -> ![link](https://1drv.ms/u/s!AuP69qmQkR8wh6wXWiyKiabumsmJnA?e=M1cqAG)
+
+
 ## Film visti
 - 24 giugno
 	- [[Carmen]], di Francesco Rosi (solo l'inizio)
