--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -15,7 +15,7 @@ Un elemento caratteristico del festival è l'accompagnamento dal vivo per i film
 e qui durante lo svolgimento del film
 ![Orchestra](/assets/foto/2022/bologna_foolish_orchestra2.jpg)
 
-Qui anche un breve spezzone video -> [link](https://1drv.ms/u/s!AuP69qmQkR8wh6wXWiyKiabumsmJnA?e=M1cqAG)
+Qui anche un breve spezzone video -> [link](https://1drv.ms/v/s!AuP69qmQkR8wh6wYL_k0_Jhsl3IlaQ?e=bZ5Qaj)
 
 
 ## Film visti
