--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -42,6 +42,7 @@ Qui anche un breve spezzone video -> [link](https://1drv.ms/v/s!AuP69qmQkR8wh6wY
 	- [[Black Tuesday]], di Hugo Fregonese con Edward G. Robinson, Usa, 1954
 	- *** [[Kenki]], di Kenji Misumi, Giappone, 1965
 	- *** [[Man in the attic]], di Hugo Fregonese, Usa, 1953
+	- [[Dans la nuit]]
 - 29 giugno
 	- *** [[Algérie en flammes]], di René Vautier, Algeria, 1958
 	- [[Le mains libres]], di Ennio Lorenzini, Algeria, 1964
