--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -6,6 +6,12 @@ date : 22-06-2022
 
 ## cose fatte
 - piatto kebab davanti all'Arlecchino consente di mangiare proteine e verdure senza carboidrati (a parte le patate fritte...)
+- ristorante giapponese in via riva di reno (tra Arlecchino e Jolly). non male e economico a pranzo
+- mercato centrale di Bologna ha dei localini niente male per mangiare. provato quello di pesce.
+
+
+---
+
 
 ![Al festival del Cinema Ritrovato](/assets/foto/2022/bologna_festival.jpg)
 
