--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -9,6 +9,10 @@ date : 22-06-2022
 - ristorante giapponese in via riva di reno (tra Arlecchino e Jolly). non male e economico a pranzo
 - mercato centrale di Bologna ha dei localini niente male per mangiare. provato quello di pesce.
 
+e poi visione in piazza dei film...
+![io a bologna](/assets/foto/2022/bologna_me.jpeg)
+(in basso a destra ci sono io con la maglietta di bud spencer)
+
 
 ---
 
