--- a/_notes/Public/diario/2022, Luglio 4-7. ARLES.md
+++ b/_notes/Public/diario/2022, Luglio 4-7. ARLES.md
@@ -1,7 +1,7 @@
 ---
-title: arles appunti
-notetype : feed
-date : 03-07-2022
+title: 2022, Luglio 4-7. ARLES
+notetype : unfeed
+date : 08-07-2022
 ---
 
 - [[a feminist avangarde]]
