--- a/_notes/Public/diario/2022, Maggio 19-23. TORINO.md
+++ b/_notes/Public/diario/2022, Maggio 19-23. TORINO.md
@@ -9,7 +9,7 @@ date : 23-05-2022
 
 - [[2022, Maggio 21. Allianz Stadium Torino]]
 
-- [[2022, Maggio 22. Camera Torino]]
+- [[Capolavori fotografia moderna]]
 
 ## luoghi
 - Japs [link](https://www.japs.it/)
