--- a/_notes/Public/diario/2022, Luglio 4-7. ARLES.md
+++ b/_notes/Public/diario/2022, Luglio 4-7. ARLES.md
@@ -4,40 +4,11 @@ notetype : unfeed
 date : 08-07-2022
 ---
 
-- [[a feminist avangarde]]
-- [[akeem smith]]
-- [[babette mangolte]]
-- [[bettina grossman]]
-- [[bruno serralongue]]
-- [[but still it turns]]
-- [[cartographies du corps]]
-- [[celeste leeuwenburg]]
-- [[colas and delort]]
-- [[daniel jack lyons]]
-- [[debmalya roy choudhuri]]
-- [[estefania penafiel loaiza]]
-- [[frida orupabo]]
-- [[gal and hiroshima]]
-- [[hanaei and montazami]]
-- [[if a tree falls in a forest]]
-- [[imagined documents]]
-- [[julien lombardi]]
-- [[lea habourdin]]
-- [[lee miller]]
-- [[lukas hoffmann]]
-- [[maya ines touam]]
-- [[mika sperling]]
-- [[mitch epstein]]
-- [[noemie goudal]]
-- [[olga grotova]]
-- [[pierfrancesco celada]]
-- [[prix pictet retrospective]] - non c'è!!
-- [[rahim fortune]]
-- [[ritual inhabitual]]
-- [[romain urhausen]]
-- [[sandra brewster]]
-- [[sathish kumar]]
-- [[seif kousmate]]
-- [[songs of the sky]]
-- [[to heal a world]]
-- [[wang yimo]]
+## Cose fatte
+Ovviamente,  [[Les Rencontres d'Arles 2022]]
+
+ma anche,
+- entrata rapida nel cimitero d'Arles, fantastico. devo recuperare il servizio che feci qualche anno fa
+
+Cibo:
+- 
