--- a/_notes/Public/diario/2022, Luglio 4-7. ARLES.md
+++ b/_notes/Public/diario/2022, Luglio 4-7. ARLES.md
@@ -10,5 +10,12 @@ Ovviamente,  [[Les Rencontres d'Arles 2022]]
 ma anche,
 - entrata rapida nel cimitero d'Arles, fantastico. devo recuperare il servizio che feci qualche anno fa
 
+![](https://alet313.s3.eu-west-3.amazonaws.com/img/foto/2022/arles/arles2225.jpg)
+
 Cibo:
+- mangiato, in stile molto francese e molto carnivoro, a [l'affenage](https://goo.gl/maps/29f553CgmYC4YHqG9)
 - 
+
+Vista anche la Chiesa di [Saint-Trophime](https://goo.gl/maps/V49c8EmUPkrNqihB6) con molti arazzi a decorare le pareti.
+![arazzi all'interno della chiesa](https://alet313.s3.eu-west-3.amazonaws.com/img/foto/2022/arles/arles2222.jpg)
+
