--- a/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
+++ b/_notes/Public/diario/2022, Giugno 24-30. BOLOGNA.md
@@ -11,7 +11,7 @@ date : 22-06-2022
 
 e poi visione in piazza dei film...
 ![io a bologna](/assets/foto/2022/bologna_me.jpeg)
-(in basso a destra ci sono io con la maglietta di bud spencer)
+(in prima file in basso a destra ci sono io con la maglietta di bud spencer)
 
 
 ---
