--- a/_notes/Public/diario/2022, Giugno 18. CAMAIORE.md
+++ b/_notes/Public/diario/2022, Giugno 18. CAMAIORE.md
@@ -10,7 +10,7 @@ Manifestazione legata alla processione del Corpus Domini, prevista per il 18 e 1
 
 In [questa pagina](https://www.comune.camaiore.lu.it/de/news/7059-presentazione-tappeti-di-segatura-2022) si racconta un po' la storia e la tradizione.
 
-In questa passeggiata ho documentato.
+In questa passeggiata ho scattato qualche foto per documentare.
 
 Ecco come si presentano i "tappeti" in segatura. Questi verranno effettivamente calpestati durante la processione ma durante la preparazione sono protetti da transenne.
 
@@ -44,9 +44,9 @@ realizzato attraverso piccole panche che consentono di attraversare il tappeto s
 
 e con dei pezzi di legno che coprono le zone già colorate per lasciare libere soltanto quelle ancora da realizzare
 
-![tappeti di segatura a camaiore](https://alet313.s3.eu-west-3.amazonaws.com/img/foto/2022/camaiore/camaiore-_10.jpg)
+![tappeti di segatura a camaiore](https://alet313.s3.eu-west-3.amazonaws.com/img/foto/2022/camaiore/camaiore-10.jpg)
 
-o dei veri e propri stampi sagomati
+e dei veri e propri stampi sagomati
 
 ![tappeti di segatura a camaiore](https://alet313.s3.eu-west-3.amazonaws.com/img/foto/2022/camaiore/camaiore-12.jpg)
 
